# platotermClassicMac

./: CMakeLists.txt  PLATOTERM.r  README.md  build.sh  config.c  config.h  font.h  help.c  io.c  key.h  keyboard.c  keyboard.h  main.c  plato_key.h  protocol.c  protocol.h  screen.c  screen.h  splash.h  terminal.c  touch.c  touch.h  trace.c
